[package]
name = "rtoml"
version = "0.1.1"
authors = ["daksh14 <somilsharma627@gmail.com>"]
edition = "2018"
description = "toml parser"
license = "MIT"

[dependencies]
simdutf8 = { version = "0.1.4", features = [ "aarch64_neon" ] }
speedate = "0.6.0"
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = "0.3"
toml = "0.5.9"

[[bench]]
name = "rtoml"
harness = false
